- [Feature] Retain modification date in metadata for uploads (Google Storage) (#11784)
- [Feature] Retain modification date in metadata for uploads (S3) (#11784)
- [Feature] Add --purge option to invalidate files in Amazon CloudFront distributions and OpenStack Swift (X-CDN-Enabled header) (#11767)
- [Feature] New default connection profile (ownCloud)
- [Bugfix] Change default path for NextCloud connections to include username (#11787)
- [Bugfix] Failed to overwrite upload of object with custom metadata (Google Storage) (#11781)
- [Bugfix] Skip duplicate file versions in output (Cyberduck CLI) (#11786)
- [Bugfix] Fails to use selected private key file outside of ~/.ssh folder (SFTP, Mac App Store) (#11782)

7.10.2
- [Feature] Add --purge option to invalidate files in Amazon CloudFront distributions and OpenStack Swift (X-CDN-Enabled header) (#11767)
- [Bugfix] Links for CloudFront distributions and S3 website endpoints are missing in the Copy URL and Open URL menu (S3) (#11764)
- [Bugfix] Failure downloading files (Files.com)
- [Bugfix] Return existing share URL when found (Dropbox) (#11209)
- [Bugfix] Select origin bucket for logging target with missing permission to list all buckets (S3) (#17755)
- [Bugfix] Unable to upload to buckets with uniform bucket-level access enabled (Google Storage) (#11766)
- [Bugfix] Missing progress information when copying file (#11019)

7.10.1
- [Feature] Support S3 interface endpoints (AWS PrivateLink for Amazon S3) (#11735)
- [Feature] Updated support for Files.com using proprietary REST API (Files.com)
- [Feature] Allow override of protocol specific settings in connection profiles
- [Bugfix] Unable to access team drive set as default path in bookmark (Google Drive)
- [Bugfix] Login failure with file transfers using multiple connections (FTP)
- [Bugfix] Downloads from HTTP server with no WebDAV extension support (CLI) (#11727)

7.10.0
- [Feature] Preference to set default storage class (Google Storage) (#11521)