@@ -84,6 +84,8 @@
             target="_blank" href="https://trac.cyberduck.io/ticket/11767">#11767</a>)
     </li>
     <li><span class="label label-success">Feature</span> New default connection profile (ownCloud)</li>
+    <li><span class="label label-success">Feature</span> Build package in AppImage format (CLI) (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/11762">#11762</a>)</li>
     <li><span class="label label-warning">Bugfix</span> Change default path for NextCloud connections to include
         username (<a
             target="_blank" href="https://trac.cyberduck.io/ticket/11787">#11787</a>)
@@ -99,6 +101,16 @@
         (SFTP, Mac App Store) (<a
             target="_blank" href="https://trac.cyberduck.io/ticket/11782">#11782</a>)
     </li>
+    <li><span class="label label-warning">Bugfix</span> Unable to delete folders (Google Storage) (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/11808">#11808</a>)</li>
+    <li><span class="label label-warning">Bugfix</span> Allow to set Glacier storage class (Google Storage) (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/11521">#11521</a>)</li>
+    <li><span class="label label-warning">Bugfix</span> Unable to remove delete marker (S3) (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/11803">#11803</a>)</li>
+    <li><span class="label label-warning">Bugfix</span> Taskbar shows incorrect number of transfers (Windows) (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/11813">#11813</a>)</li>
+    <li><span class="label label-warning">Bugfix</span> Allow to delete trashed files (Google Drive) (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/11816">#11816</a>)</li>
 </ul>
 
 <p>
